Closed Bug 647280 Opened 15 years ago Closed 15 years ago

Fix Clang Warnings

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch patchSplinter Review
Removes poor implicit casts, unused functions, and some meaningless uses of "volatile".
Attachment #523648 - Flags: review?
Attachment #523648 - Flags: review? → review?(luke)
Comment on attachment 523648 [details] [diff] [review] patch Hah, good one clang.
Attachment #523648 - Flags: review?(luke) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: