Fix clang warnings (bug 647280, r=luke).